--- a/microservice_containers.tex
+++ b/microservice_containers.tex
@@ -228,9 +228,16 @@ In hac habitasse platea dictumst. Integer condimentum malesuada risus et convall
  }
  
    \headerbox{Refefrence}{name=reference,column=0,row=0,below=cidesc}{
-   ref1
+    
+    [1] Microservice, Martin Fowler's blog http://bit.ly/1dI7ZJQ
+    
+    [2] \underline{Building Microservices} Designing Fine-Grained Systems, Sam Newman, O'Reilly Media 215
+    
+    [3] Software Engineering Radio, Episode 213: James Lewis on Microservices, http://bit.ly/1tkIbeN
+   
+    
   
-  ref2
+  
   \vspace{0.3em}
   
  }
