fixed some typos

--- a/microservice_containers.tex
+++ b/microservice_containers.tex
@@ -256,12 +256,12 @@
    
  }
  
-   \headerbox{Tests \& intégration continue}{name=cidesc,column=0,row=0,below=microdesc}{
+   \headerbox{Typologie des tests}{name=cidesc,column=0,row=0,below=microdesc}{
   
   
    \begin{center}
 	\includegraphics[width=\textwidth]{tests}
-    \textbf{Typologie des tests}   
+    \textbf{Trois niveaux de tests automatisés dans une architecture microservices}
    \end{center}
    
    
@@ -269,7 +269,7 @@
 
    
  }
-   \headerbox{Intégration Continue}{name=ci,column=1,span=2,row=0,below=micro}{
+   \headerbox{Intégration Continue \& workflow de développement}{name=ci,column=1,span=2,row=0,below=micro}{
    
 	\begin{center}
 	\includegraphics[width=\textwidth]{workflow}
