poster en français pour la césure des mots

--- a/microservice_containers.tex
+++ b/microservice_containers.tex
@@ -20,7 +20,7 @@
 \pgfdeclarelayer{background}
 \pgfdeclarelayer{foreground}
 \pgfsetlayers{background,main,foreground}
-
+\usepackage[francais]{babel}
 \usepackage{times}
 \usepackage{helvet}
 %\usepackage{bookman}
