--- a/microservice_containers.tex
+++ b/microservice_containers.tex
@@ -147,11 +147,17 @@
     \makebox[8em][r]{%
       \begin{minipage}{16em}
         \hfill
-		\includegraphics[height=5em]{labri}
-        \includegraphics[height=5em]{enseirb-matmeca}
+        \begin{flushright}
+	        
 		
+		\includegraphics[height=4em]{labri}
+        \includegraphics[height=4em]{enseirb-matmeca}\\
+        \includegraphics[height=3em]{jdevlogo2015.png}
+		\end{flushright}
       \end{minipage}
     }
+    
+    
   }
 
   \tikzstyle{light shaded}=[top color=baposterBGtwo!30!white,bottom color=baposterBGone!30!white,shading=axis,shading angle=30]
@@ -183,11 +189,11 @@
    Nous documentons comment nous avons utilisé Docker comme \textbf{unité de déploiement} pour les mises en production et comme \textbf{unité de développement} pour les tests et l'Intégration Continue.
    
    \vspace{1em}
-   \textbf{Mots clés}: \textit{Docker, Architecture Microservice, Architecture RestFul, Intégration Continue, Jenkins, Tests Unitaires, Tests d'intégration, Java, Mock}
+   \textbf{Mots clés}: \textit{Docker, Architecture Microservice, Architecture RestFul, Intégration Continue, Jenkins, Tests Unitaires, Tests d'intégration, Java, Mock.}
 
 
  }
-   \headerbox{Cobaye: Le Project SnapMail}{name=project,column=1,span=2,row=0}{
+   \headerbox{Cobaye: Le Projet SnapMail}{name=project,column=1,span=2,row=0}{
 
    \begin{multicols}{2}
 	   
@@ -195,7 +201,7 @@
 			\begin{minipage}{0.5\textwidth}
 			\vspace{1em}
 				\includegraphics[width=\textwidth]{snapmail}
-				\begin{center}\textbf{Un serveur mail à la maison qui héberge vos pièces jointes volumineuses}
+				\begin{center}\textbf{Plateforme privée d'hébergement de pièces jointes}
 				
 				\end{center}
 				
@@ -203,11 +209,11 @@
 			
 				
 			
-			Pour pallier au problème des \textbf{pièces jointes volumineuses}, une passerelle mail est déployée sur une passerelle résidentielle.
-			L'utilisateur configure son client mail avec le serveur SMTP de la passerelle, afin d'y faire transiter tout son courrier sortant. 
-			La passerelle va \textbf{détacher les pièces jointes}, \textbf{les stocker} et \textbf{les remplacer par des liens} dans le mail . Ces liens pointent vers les contenus originaux ainsi que vers des \textbf{versions optimisées} des videos (streaming adaptatif) et photo (converties et redimentionnées)
+			Pour pallier au problème des \textbf{pièces jointes volumineuses}, un server SMTP est déployée sur une passerelle résidentielle.
+			L'utilisateur configure son client mail avec ce server afin d'y faire transiter son courrier sortant. 
+			La passerelle va \textbf{détacher les pièces jointes}, \textbf{les stocker} et \textbf{les remplacer par des liens} dans le mail . Ces liens pointent vers les contenus originaux ainsi que vers des \textbf{versions optimisées} des videos (streaming adaptatif) et photos (converties et redimentionnées).
 			
-			Le projet est conçu comme un greffon à un autre projet de \textbf{réseaux social distribué } également déployé sur les passerelles résidentielles
+			Le projet est conçu comme un greffon à un autre projet de \textbf{réseaux social distribué } également déployé sur les passerelles résidentielles.
 			
 			
 	\end{multicols}
@@ -232,6 +238,7 @@
 
  }
    \headerbox{Mise en place dans nos projets}{name=micro,column=1,span=2,row=0,below=project}{
+   \vspace{2em}
    \begin{multicols}{2}
 		   \begin{minipage}{0.5\textwidth}
 						\includegraphics[width=\textwidth]{snapservices}
@@ -241,19 +248,21 @@
 					\end{minipage}
 					
 	
-	Les domaines sont suffisament différents pour que les contours métiers soient clairs: \textit{Réseau Social, Transcoding Multimédia, Email, Antivirus}. Nous choisissons passer sous une architecture Microservices (MS) pour plusieurs raison:
+	Les domaines sont suffisament différents pour que les contours métiers soient clairs: \textit{Réseau Social, Transcoding Multimédia, Email, Antivirus}. Nous choisissons de passer sous une architecture Microservices (MS) pour plusieurs raison:
+	\vspace{1em}
 	\begin{itemize}
-		\item Les deux projets doivent être évalués indépendemment sans que l'un compromette l'autre. \MVRightarrow \  \textbf{séparation des repos de sources pas de code partagé, pas de base de donnée commune}
-		\item Communication nécessaire entre services \MVRightarrow \ \textbf{Mise en place de l'API REST}
-		\item Choix du meilleur langage pour chaque service (Java, Python) \MVRightarrow \ \textbf{Hétérogénéité des solutions techniques masquée derrière l'API}
-		\item Nécessité de faire tourner les autres services en local pour développer le sien\MVRightarrow \ \textbf{Dockerisation des MS, déploiement des MS pré-configurés dans DockerHub, récupération automatique des images par le dev }
-		\item Démo du produit global tous les 15 jours \MVRightarrow \ \textbf{déploiement de toute la solution avec Docker Compose en pré-prod. Un service défecteux peut être isolé pas livré}
+		\item Les deux projets doivent être évalués indépendamment sans que l'un compromette l'autre. \MVRightarrow \  \textbf{séparation des dépots de sources, pas de code partagé, pas de base de donnée commune}.
+		\item Communication nécessaire entre services \MVRightarrow \ \textbf{Mise en place de l'API REST}.
+		\item Choix du meilleur langage pour chaque service (Java, Python) \MVRightarrow \ \textbf{Hétérogénéité des solutions techniques masquée derrière l'API}.
+		\item Nécessité de faire tourner les autres services en local pour développer le sien\MVRightarrow \ \textbf{Dockerisation des MS, déploiement des MS pré-configurés dans DockerHub, récupération automatique des images par le dev}.
+		\item Approche agile du développement entrainant une démo du produit global tous les 15 jours \MVRightarrow \ \textbf{déploiement de toute la solution avec Docker Compose en pré-prod. La livraison d'un service défecteux peut être reportée}.
+		
 	\end{itemize} 
 	
 					
 	\end{multicols}
 	
-   
+   \vspace{1.8em}
  }
  
    \headerbox{Typologie des tests}{name=cidesc,column=0,row=0,below=microdesc}{
@@ -280,9 +289,9 @@
     
 Tester une architecture Microservice montre certaines particularités par rapport aux monolithes.
 \begin{itemize}
-	\item En raison de l'homogénécité du métier, \textbf{les tests unitaires} sont plus simples écrire. 
+	\item En raison de l'homogénéité du métier, \textbf{les tests unitaires} sont plus simples écrire. 
 	\item  \textbf{Les tests de services} nécessitent l'utilisation de mocks d'interfaces REST, que nous avons réalisé avec Montbank (http://www.mbtest.org/).
-	\item Une fois par jour, Jenkins réalise une série de \textbf{tests de bout en bout} en lançant un environement iso-production des services et en faisant jouer des scenari utilisateurs.
+	\item Une fois par jour, Jenkins réalise une série de \textbf{tests de bout en bout} en lançant un environnement iso-production des services et en faisant jouer des scénarios utilisateurs.
 	\item Grace au DockerHub, toutes les machines autorisées peuvent récupérer les images docker et les lancer à tout moment. Les \textbf{bugs sont donc plus facilement reproduits} sur la machine du développeur.
 \end{itemize}
 
@@ -309,11 +318,11 @@ Tester une architecture Microservice montre certaines particularités par rappor
  }
    \headerbox{Exemples d'architectures Microservices}{name=ack,column=1,span=2,row=0,below=ci}{
  
- \vspace{1.5em}
+ 
  \includegraphics[width=0.33\textwidth]{docker}
  \includegraphics[width=0.33\textwidth]{netflix}
  \includegraphics[width=0.33\textwidth]{amazon}
- \vspace{1.5em}
+ \vspace{0.05em}
   
  }
  
