capitalization, added 1 sentence in contribution

--- a/microservice_containers.tex
+++ b/microservice_containers.tex
@@ -186,7 +186,7 @@
   
    Nous exposons un \textbf{retour d'expérience} sur le déroulé de 2 projets étudiants où nous avons utilisé Docker au service d'une architecture Microservice.
    
-   Nous documentons comment nous avons utilisé Docker comme \textbf{unité de déploiement} pour les mises en production et comme \textbf{unité de développement} pour les tests et l'Intégration Continue.
+   Nous expliquons comment nous avons utilisé Docker comme \textbf{unité de déploiement} pour les mises en production et comme \textbf{unité de développement} pour les tests et l'Intégration Continue.
    
    \vspace{1em}
    \textbf{Mots clés}: \textit{Docker, Architecture Microservice, Architecture RestFul, Intégration Continue, Jenkins, Tests Unitaires, Tests d'intégration, Java, Mock.}
@@ -270,7 +270,7 @@
   
    \begin{center}
 	\includegraphics[width=\textwidth]{tests}
-    \textbf{Trois niveaux de tests automatisés dans une architecture microservices}
+    \textbf{Trois niveaux de tests automatisés dans une architecture Microservices}
    \end{center}
    
    
@@ -316,7 +316,7 @@ Tester une architecture Microservice montre certaines particularités par rappor
   \vspace{0.3em}
   
  }
-   \headerbox{Exemples d'architectures Microservices}{name=ack,column=1,span=2,row=0,below=ci}{
+   \headerbox{Exemples d'Architectures Microservices}{name=ack,column=1,span=2,row=0,below=ci}{
  
  
  \includegraphics[width=0.33\textwidth]{docker}
